# Sharpy

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  package-lock.json
.claude/: settings.local.json
benches/: sharpening.rs
examples/: basic.rs  builder.rs  compare_methods.rs  presets.rs
plan/: features.md  improvements.md  lib_design.md  sharpy_tool.md  stage1.md
src/: builder.rs  lib.rs  operations.rs  sharpening.rs  utils.rs
tests/: integration_test.rs
