[package]
name = "sharpy"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "High-performance image sharpening library for Rust"
repository = "https://github.com/yourusername/sharpy"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["image", "sharpening", "image-processing", "graphics", "filter"]
categories = ["multimedia::images", "multimedia::encoding"]

[[bin]]
name = "sharpy"
path = "src/bin/sharpy.rs"

[dependencies]
image = "0.24"
rayon = "1.7"
thiserror = "1.0"
clap = { version = "4.5", features = ["derive"] }
indicatif = "0.17"
glob = "0.3"
anyhow = "1.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "sharpening"
harness = false
