[package]
name = "sharpy"
version = "0.1.0"
edition = "2021"
authors = ["Max Enko <max@bigmail.one>"]
description = "High-performance image sharpening library for Rust"
repository = "https://github.com/maxenko/sharpy"
license = "MIT"
readme = "README.md"
keywords = ["image", "sharpening", "image-processing", "graphics", "filter"]
categories = ["multimedia::images", "multimedia::encoding"]

[[bin]]
name = "sharpy"
path = "src/bin/sharpy.rs"

[dependencies]
image = "0.25"
rayon = "1.10"
thiserror = "2.0"
clap = { version = "4.5", features = ["derive"] }
indicatif = "0.18"
glob = "0.3"
anyhow = "1.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "sharpening"
harness = false
